# pynguin_test

./: pyproject.toml
source/_static/: pynguin.txt
