[tool.poetry]
name = "pynguin-test"
version = "0.1.0"
description = ""
authors = ["Luis Ek"]
readme = "README.md"
packages = [{include = "pynguin_test"}]

[tool.poetry.dependencies]
python = ">=3.10 <3.11"
pynguin = "^0.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
